--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <!--Final, top-level theme-->
-    <style name="Theme.BaseProject.DayNight" parent="Theme.BaseProject.Dark" />
+    <style name="Theme.AvowsTMDB.DayNight" parent="Theme.AvowsTMDB.Dark" />
 
-    <style name="Theme.BaseProject.Dark" parent="Theme.BaseProject">
+    <style name="Theme.AvowsTMDB.Dark" parent="Theme.AvowsTMDB">
         <item name="colorPrimary">@color/md_theme_dark_primary</item>
         <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer</item>
